deployment/backend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-backend-ingress
  namespace: ecommerce-backend-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - authen.ndiliatalents.com
      secretName: backend-ecommerce-tls-secret
  rules:
    - host: authen.ndiliatalents.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-backend-svc
                port:
                  number: 80
